# mini.c

./: .gitignore  CMakeLists.txt  COPYING  README.md
example/: demo.c
src/: mini.c  mini.h
